# LettuceAI

./: README.md  package-lock.json  package.json
.github/workflows/: android-build.yml  desktop-build.yml
scripts/: run-tauri-cuda-auto.mjs  run-tauri-webkit-safe.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/cmake/: windows-vulkan-overrides.cmake
src-tauri/src/: abort_manager.rs  lib.rs  llama_cpp.rs  utils.rs
src-tauri/src/app/: commands.rs
src-tauri/src/chat_manager/: commands.rs  lorebook_entry_generator.rs  mod.rs  prompt_engine.rs  request.rs  service.rs  sse.rs  storage.rs  temporal.rs  types.rs
src-tauri/src/chat_manager/companion/: mod.rs
src-tauri/src/chat_manager/execution/: mod.rs  provider_fields.rs
src-tauri/src/chat_manager/flows/: completion.rs  continuation.rs  regenerate.rs
src-tauri/src/chat_manager/lorebook_generator/: pipeline.rs
src-tauri/src/chat_manager/memory/: flow.rs
src-tauri/src/chat_manager/persistence/: storage.rs
src-tauri/src/chat_manager/prompting/: entry_conditions.rs  parameter_engine.rs  prompt_engine.rs  prompts.rs  request_builder.rs
src-tauri/src/chat_manager/provider_adapter/: anannas.rs  anthropic.rs  chutes.rs  custom.rs  custom_anthropic.rs  deepseek.rs  featherless.rs  google_gemini.rs  groq.rs  intenserp.rs  lettuce_engine.rs  llamacpp.rs  lmstudio.rs  mistral.rs  mod.rs  moonshot.rs  nanogpt.rs  nvidia.rs  ollama.rs  openai.rs  qwen.rs  xai.rs  zai.rs
src-tauri/src/chat_manager/reply_helper/: mod.rs
src-tauri/src/chat_manager/scene/: mod.rs
src-tauri/src/creation_helper/: commands.rs  service.rs  types.rs
src-tauri/src/group_chat_manager/: mod.rs
src-tauri/src/image_generator/: commands.rs  storage.rs  types.rs
src-tauri/src/image_generator/provider_adapter/: google_gemini.rs  mod.rs  nanogpt.rs  openai.rs  openrouter.rs  xai.rs
src-tauri/src/infra/: dynamic_memory_run_manager.rs  error.rs  logger.rs  mod.rs  serde_utils.rs  utils.rs
src-tauri/src/llama_cpp/: mod.rs
src-tauri/src/llama_cpp/desktop/: context.rs
src-tauri/src/migrations/: mod.rs
src-tauri/src/models/: cost.rs  types.rs
src-tauri/src/models/pricing/: calc.rs  fetchers.rs  mod.rs
src-tauri/src/platform/: android_monitor.rs  mod.rs
src-tauri/src/storage_manager/: backup.rs  chatpkg.rs  companion_scheduled_notes.rs  db.rs  group_sessions.rs  media.rs  memory_embeddings.rs  mod.rs  sessions.rs
src-tauri/src/storage_manager/entity_transfer/: engine.rs  mod.rs
src-tauri/src/sync/: db.rs  manager.rs  protocol.rs
src-tauri/src/usage/: commands.rs
src/core/: asyncTracker.ts
src/core/chat/: manager.ts
src/core/companion/: soul.ts
src/core/i18n/locales/: de.ts  el.ts  en.ts  es.ts  fil.ts  fr.ts  hi.ts  id.ts  it.ts  ja.ts  ko.ts  nl.ts  no.ts  pl.ts  pt.ts  ru.ts  vi.ts  zh-Hant.ts
src/core/image-generation/: index.ts
src/core/storage/: advanced.ts  files.ts  repo.ts  schemas.ts
src/core/utils/: platform.ts
src/ui/: navigation.ts
src/ui/components/App/: BottomNav.tsx  TopNav.tsx
src/ui/components/AvatarPicker/: AvatarGenerationSheet.tsx  index.tsx
src/ui/pages/chats/: Chat.tsx  ChatSettings.tsx  Chats.tsx
src/ui/pages/group-chats/: GroupChatPage.tsx  GroupChatSettingsPage.tsx  GroupSettingsPage.tsx
src/ui/pages/settings/: AccessibilityPage.tsx  AdvancedPage.tsx  CompanionSoulWriterPage.tsx  CompanionsHubPage.tsx  CreationHelperPage.tsx  DeveloperPage.tsx  DynamicMemoryPage.tsx  EditModelPage.tsx  EditPromptTemplate.tsx  HelpMeReplyPage.tsx  HuggingFaceBrowserPage.tsx  ImageGenerationPage.tsx  InstalledModelsPage.tsx  LogsPage.tsx  (+6 more)
(+17 files in other folders)
