[package]
name = "lettuceai"
version = "1.0.0"
description = "LettuceAI mobile AI roleplaying app."
authors = ["MegalithOfficial"]
edition = "2021"

[features]
default = []
# NVIDIA GPU acceleration for desktop llama.cpp (CUDA backend).
llama-gpu-cuda = ["llama-cpp-2/cuda"]
# Same as llama-gpu-cuda, but disables CUDA VMM in llama.cpp.
llama-gpu-cuda-no-vmm = ["llama-gpu-cuda", "llama-cpp-2/cuda-no-vmm"]
# Cross-vendor GPU acceleration path for desktop llama.cpp (Vulkan backend).
llama-gpu-vulkan = ["llama-cpp-2/vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lettuceai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
zip = "0.6"
anyhow = "1"
flate2 = "1.0"
tar = "0.4"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unified-entity-card = "0.1.1"
keyring = "2"
zeroize = "1"
tauri-plugin-aptabase = { git = "https://github.com/MegalithOfficial/tauri-plugin-aptabase" }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
futures-util = "0.3"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
rand = "0.8"
blake3 = "1"
whoami = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-app-events = "0.2.0"
base64 = "0.22"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
zip = "2"
walkdir = "2"
dirs = "5"
tokenizers = { version = "0.20", features = ["http"] }
ndarray = "0.16"
lazy_static = "1.5.0"
anyhow = "1.0.100"
tauri-plugin-fs = "2"
url = "2"
tauri-plugin-os = "2"
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
bytes = "1"
local-ip-address = "0.6"
futures = "0.3"
if-addrs = "0.14.0"
tauri-plugin-tts = "=0.1.1"
urlencoding = "2.1.3"
flate2 = "1.0"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
machine-uid = "0.3"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "half", "ndarray"] }
llama-cpp-2 = { version = "0.1.132" }
llama-cpp-sys-2 = { version = "0.1.132" }
sysinfo = "0.33"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "2"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "half", "nnapi", "ndarray"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["coreml", "half", "ndarray"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-haptics = "2"

[patch.crates-io]
esaxx-rs = { path = "crates/esaxx-rs-0.1.10" }
